--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,16 @@
     "dev": "nodemon ./src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.8.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
