--- a/server/package.json
+++ b/server/package.json
@@ -3,22 +3,27 @@
   "scripts": {
     "start": "node ./dist/server.js",
     "build": "npx tsc -p .",
-    "dev": "nodemon ./src/server.ts"
+    "dev": "ts-node-dev ./src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.8.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
-    "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
 }
